src/tests/render_snapshots/snapshots/sabiql__render_snapshots__connection_flow__connection_setup_mysql_preview_does_not_mask_empty_password.snap
---
source: src/tests/render_snapshots/connection_flow.rs
assertion_line: 132
expression: output
---
test_project ▸ - ▸ -                                                                                                                 not loaded | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││          ╭ New Connection ────────────────────────────────────────────╮                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          │  Type:       [ MySQL                    ▼ ]                │                                                  │
│                                       ││          │  Name:       [                            ]                │                                                  │
│                                       ││          │  Transport:  [ TCP                      ▼ ]                │                                                  │
│                                       ││          │  Host:       [ localhost                  ]                │                                                  │
│                                       ││          │  Port:       [ 3306                       ]                │                                                  │
│                                       ││          │  Database:   [ app                        ]                │                                                  │
│                                       ││          │  User:       [ mysql_user                 ]                │                                                  │
│                                       │└──────────│  Password:   [ empty = no password        ]                │──────────────────────────────────────────────────┘
│                                       │┌ [3] Resul│  SSL Mode:   [ PREFERRED                ▼ ]                │──────────────────────────────────────────────────┐
│                                       ││(select a │  Cleartext:  [ disabled                 ▼ ]                │                                                  │
│                                       ││          │  Server Key: [                            ]                │                                                  │
│                                       ││          │  Get Server: [ disabled                 ▼ ]                │                                                  │
│                                       ││          │  Cert Path:  [                            ]                │                                                  │
│                                       ││          │  Key Path:   [                            ]                │                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          │  → mysql://mysql_user:@localhost:3306/app?ssl-mode=PREFER  │                                                  │
│                                       ││          │    RED                                                     │                                                  │
│                                       ││          │  Note: Connection info is stored locally in plain text     │                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          ╰ Tab/⇧Tab: Field │ Enter: Toggle │ ^S: Connect │ Esc: Cancel╯                                                  │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
